--- a/django/templates/accounts/login.html
+++ b/django/templates/accounts/login.html
@@ -2,7 +2,7 @@
 
 {% block title %}Login{% endblock %}
 {% block content %}
-<H2>Login</H2>
+<h2>Login</h2>
 <form method="post">
     {% csrf_token %}
     {{form.as_p }}
