--- a/django/templates/navbar.html
+++ b/django/templates/navbar.html
@@ -8,11 +8,13 @@
 
     <span style="float:right">
         {% if user.is.authenticated %}
-            {% url 'accounts:profile' as profile_url %}
-        <span> Hi {% if request.path == profile_url %}{{ user.username}}{% else %}<a href=""{{ profile_url}}>{{user.username}}</a>{% endif %}!</span>
-            <span><a href="{% url 'accounts:logout' as logout_url %}">Logout</a></span>
+
+        <span> Hi {{ user.username}}</span>
+        <span><a href="{% url 'accounts:logout' %}">Logout</a></span>
         {% else %}
-            <span><a href="{% url 'accounts:login' as login_url %}">Login</a></span>
+            <span><a href="{% url 'accounts:login' %}">Login</a></span>
         {% endif %}
     </span>
 </div>
+
+
