--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-
+{% block title %}Trener Tenisa{% endblock %}
 {% block content %}
-<H1>
+<h1>
     Template Homepage
-</H1>
+</h1>
 
 {% endblock %}
