--- a/django/templates/navbar.html
+++ b/django/templates/navbar.html
@@ -7,7 +7,7 @@
     <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{ contact_url }}">Contact</a>{% endif %}</span>
 
     <span style="float:right">
-        {% if user.is.authenticated %}
+        {% if user.is_authenticated %}
 
         <span> Hi {{ user.username}}</span>
         <span><a href="{% url 'accounts:logout' %}">Logout</a></span>
