--- a/django/templates/about.html
+++ b/django/templates/about.html
@@ -1,10 +1,30 @@
 {% extends 'base.html' %}
 
 {% block title %}About{% endblock %}
-{% block content %}
-<H1>
 
-    DUPA
-</H1>
+{% block content %}
+<h1>
+    About
+</h1>
+
+<!-- Add some spacing as a placeholder -->
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
 {% endblock %}
