--- a/django/templates/navbar.html
+++ b/django/templates/navbar.html
@@ -1,4 +1,26 @@
-<div>
+{% url "public:index" as index_url %}
+{% url "public:about" as about_url %}
+{% url "public:contact" as contact_url %}
+<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="{{ index_url }}">Akademia Tenisa Paweł Banak</a>
+                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold hs-bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3  js-scroll-trigger {% if request.path == index_url %}active{% endif %}" href="{{ index_url }}">Home</a></li>
+
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3  js-scroll-trigger {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}">About</a></li>
+
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3  js-scroll-trigger {% if request.path == contact_url %}active{% endif %}" href="{{ contact_url }}">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+<!--
+<nav>
     {% url 'public:index' as index_url %}
     <span>{% if request.path == index_url %}Home{% else %}<a href="{{ index_url }}">Home</a>{% endif %}</span>
     {% url 'public:about' as about_url %}
@@ -9,12 +31,12 @@
     <span style="float:right">
         {% if user.is.authenticated %}
 
-        <span> Hi {{ user.username}}</span>
-        <span><a href="{% url 'accounts:logout' %}">Logout</a></span>
+        <span> Hi {{ user.username}}!{% if request.path == profile_url %}{% else %}<a href="{{ profile_url}}">{{user.username}}</a>{% endif %}!
+            <a href="{% url 'accounts:logout' %}">Logout</a></span>
         {% else %}
             <span><a href="{% url 'accounts:login' %}">Login</a></span>
         {% endif %}
     </span>
-</div>
-
+</nav>
+-->
 
