--- a/django/templates/footer.html
+++ b/django/templates/footer.html
@@ -10,16 +10,16 @@
             <!-- Footer Location-->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <p class="lead mb-0">
-                    Reach Us @
+                    Napisz na
                     <br/>
                     <a href="mailto:banak13@o2.pl">banak13@o2.pl.com</a>
                 </p>
             </div>
             <!-- Footer Social Icons-->
             <div class="col-lg-4 mb-5 mb-lg-0">
-                <a class="btn btn-outline-light btn-social mx-1" title="Youtube" href="https://www.youtube.com/channel/UCEcNXmr7DYq1XxpWHSxaN0w"><i class="fab fa-youtube"></i></a>
-                <a class="btn btn-outline-light btn-social mx-1" title="Instagram" href="https://www.facebook.com/bazasport/"><i class="fab fa-facebook"></i></a>
-                <a class="btn btn-outline-light btn-social mx-1" title="Hackster" href="https://www.hackster.io/hackershack"><i class="fas fa-h-square"></i></a>
+                <a class="btn btn-outline-light btn-social mx-1" title="Youtube" href="https://https://www.youtube.com/embed/OVVg_BLg-Wo"><i class="fab fa-youtube"></i></a>
+                <a class="btn btn-outline-light btn-social mx-1" title="Facebook" href="https://www.facebook.com/bazasport/"><i class="fab fa-facebook"></i></a>
+                <a class="btn btn-outline-light btn-social mx-1" title="Github" href="https://github.com/banak13"><i class="fab fa-github"></i></a>
                 <a class="btn btn-outline-light btn-social mx-1" title="Patreon" href="https://www.patreon.com/hackershack"><i class="fab fa-patreon"></i></a>
             </div>
             <!-- Footer About Text-->
